# rust-toy-dns

./: .dockerignore  Cargo.toml  Dockerfile  README.md
benches/: async_calls.rs
src/: lib.rs  main.rs  protocol.rs  server.rs
src/resolver/: caching.rs  hide_ttl.rs  inflight_limit.rs  mod.rs  response_cache.rs  special.rs  stub.rs  timeout.rs
